<resources>
    <string name="app_name">Tennis Score</string>
    <string name="action_settings">Settings</string>

    <string name="app_title">Score Tennis</string>
    <string name="player_one_name">Player 1 name</string>
    <string name="player_two_name">Player 2 name</string>
    <string name="audio">AUDIO</string>
    <string name="stop_match">STOP MATCH</string>
    <string name="start_new_match">START NEW MATCH</string>
    <string name="undo">UNDO</string>
    <string name="plus">+</string>
    <string name="points">POINTS</string>
    <string name="games">GAMES</string>
    <string name="sets">SETS</string>
    <string name="best_of_three">Best of “3”</string>
    <string name="best_of_five">Best of “5”</string>
    <string name="player_one">Player one</string>
    <string name="player_two">Player two</string>
    <string name="won_the_game">" won the game!"</string>
    <string name="cant_change_game_tipe">You can\'t change game type during the game.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="confirm_new_match_title">Are you Sure You want to Start a New Match?</string>
    <string name="confirm_exit_app">Are you sure you want exit?</string>


    //Facebook
    <string name="facebook_app_id">571376993042160</string>
</resources>
