<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_pb"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <EditText
        android:id="@+id/et_player_one_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player_one_name"
        android:textColor="@color/color_pb_progress"
        android:textColorHint="@color/color_et_hint_dialog_settings" />

    <EditText
        android:id="@+id/et_player_two_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player_two_name"
        android:textColor="@color/color_pb_progress"
        android:textColorHint="@color/color_et_hint_dialog_settings" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_best_of_three"
            style="@style/MyRadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/best_of_three"
            android:textColor="@color/color_pb_progress"
            android:textSize="14sp"
            android:textStyle="bold"

            />

        <RadioButton
            android:id="@+id/rb_best_of_five"
            style="@style/MyRadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/best_of_five"
            android:textColor="@color/color_pb_progress"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="@dimen/half_margin"
            android:layout_weight="1"
            android:background="@drawable/dialogs_btn"
            android:enabled="false"
            android:text="@android:string/ok"
            android:textColor="@color/color_pb"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/half_margin"
            android:layout_weight="1"
            android:background="@drawable/dialogs_btn"
            android:text="@android:string/cancel"
            android:textColor="@color/color_pb"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>